<resources>
    <string name="app_name">Asan Pardakht</string>
    <string name="transfer_report">گزارش تراکنش</string>
    <string name="todo">TODO</string>
    <string name="successful_transfer">تراکنش موفق</string>
    <string name="transfer_card">انتقال وجه کارت به کارت</string>
    <string name="date">تاریخ</string>
    <string name="price">مبلغ</string>
    <string name="card1">کارت مبدا</string>
    <string name="card2">کارت مقصد</string>
    <string name="cardOwnerName">بنام</string>
    <string name="name">نام صاحب حساب مقصد</string>
    <string name="card_id">شماره حساب مقصد</string>
    <string name="tracking_number">شماره ارجاع</string>
    <string name="bank_reference">شماره مرجع بانک: ۰٢۵٢١۷١۴۷۸٢۵</string>
    <string name="add_to_common">افزودن کارت مقصد به ورودی های پرکاربرد</string>
    <string name="return_btn">بازگشت</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_info_title">لطفا اطلاعات را وارد نمایید</string>
    <string name="create_receipt">تهیه رسید</string>
    <string name="sample_date_time">۰۹/۰۷/١٣۹۹ ١٣:٣۹:۰۰</string>
    <string name="sample_card_one">****-****-****-6248</string>
    <string name="sample_tracking_code">0822846156</string>
</resources>