<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="moneyAmount"
            type="String" />

        <variable
            name="ownerCardNumber"
            type="String" />

        <variable
            name="ownerName"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/global_bg"
        android:layoutDirection="rtl">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerConstraint"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/my_font"
                android:text="@string/transfer_report"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewDetails"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constraintBottom_toTopOf="@+id/addToCommonTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerConstraint">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/greenArea"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/receipt_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/my_font"
                    android:text="@string/successful_transfer"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/greenArea"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/greenArea" />

                <TextView
                    android:id="@+id/transferCard"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:fontFamily="@font/my_font"
                    android:gravity="center_vertical"
                    android:text="@string/transfer_card"
                    android:textColor="@color/header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/greenArea" />

                <View
                    android:id="@+id/grayRowDate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/row_gray"
                    app:layout_constraintTop_toBottomOf="@id/transferCard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:fontFamily="@font/my_font"
                    android:text="@string/date"
                    android:textColor="@color/header"
                    app:layout_constraintBottom_toBottomOf="@id/grayRowDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/grayRowDate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:fontFamily="@font/my_font"
                    android:text="@string/sample_date_time"
                    android:textColor="@color/header"
                    android:textDirection="rtl"
                    app:layout_constraintBottom_toBottomOf="@id/grayRowDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/grayRowDate" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/margin_small"
                    android:fontFamily="@font/my_font"
                    android:gravity="center_vertical"
                    android:text="@string/price"
                    android:textColor="@color/header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/grayRowDate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:fontFamily="@font/my_font"
                    android:gravity="center_vertical"
                    android:text="@{moneyAmount}"
                    android:textColor="@color/header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/grayRowDate" />

                <View
                    android:id="@+id/grayRowCard1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/row_gray"
                    app:layout_constraintTop_toBottomOf="@id/price" />

                <TextView
                    android:id="@+id/card01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:fontFamily="@font/my_font"
                    android:text="@string/card1"
                    android:textColor="@color/header"
                    app:layout_constraintBottom_toBottomOf="@id/grayRowCard1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/grayRowCard1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:fontFamily="@font/my_font"
                    android:text="@string/sample_card_one"
                    android:textColor="@color/header"
                    android:textDirection="ltr"
                    app:layout_constraintBottom_toBottomOf="@id/grayRowCard1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/grayRowCard1" />

                <TextView
                    android:id="@+id/card02"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/margin_small"
                    android:fontFamily="@font/my_font"
                    android:gravity="center_vertical"
                    android:text="@string/card2"
                    android:textColor="@color/header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/grayRowCard1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:fontFamily="@font/my_font"
                    android:gravity="center_vertical"
                    android:text="@{ownerCardNumber}"
                    android:textColor="@color/header"
                    android:textDirection="ltr"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/grayRowCard1" />

                <View
                    android:id="@+id/grayRowName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/row_gray"
                    app:layout_constraintTop_toBottomOf="@id/card02" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:fontFamily="@font/my_font"
                    android:text="@string/cardOwnerName"
                    android:textColor="@color/header"
                    app:layout_constraintBottom_toBottomOf="@id/grayRowName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/grayRowName" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:fontFamily="@font/my_font"
                    android:text="@{ownerName}"
                    android:textColor="@color/header"
                    app:layout_constraintBottom_toBottomOf="@id/grayRowName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/grayRowName" />

                <TextView
                    android:id="@+id/trackingNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/margin_small"
                    android:fontFamily="@font/my_font"
                    android:gravity="center_vertical"
                    android:text="@string/tracking_number"
                    android:textColor="@color/header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/grayRowName" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:fontFamily="@font/my_font"
                    android:gravity="center_vertical"
                    android:text="@string/sample_tracking_code"
                    android:textColor="@color/header"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/grayRowName" />

                <TextView
                    android:id="@+id/bankReference"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/margin_small"
                    android:fontFamily="@font/my_font_bold"
                    android:gravity="center_vertical"
                    android:text="@string/bank_reference"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/trackingNumber" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="55dp"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/saman_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="55dp"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/addToCommonTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:fontFamily="@font/my_font"
            android:text="@string/add_to_common"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/btnReturn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewDetails" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toTopOf="@id/btnReturn"
            app:layout_constraintEnd_toEndOf="@id/cardViewDetails"
            app:layout_constraintTop_toBottomOf="@id/cardViewDetails" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReturn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="@dimen/margin_normal"
            android:background="@color/white"
            android:backgroundTint="@color/button_bg"
            android:fontFamily="@font/my_font_bold"
            android:text="@string/return_btn"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_share"
            app:iconGravity="start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>